# hyli-registry

./: Cargo.toml  Dockerfile.server  Dockerfile.ui  README.md
.github/workflows/: clippy.yml  docker.yml  tests.yml
contracts/: Cargo.toml
contracts/contract1/: Cargo.toml  contract1.img  contract1.txt
crate/: Cargo.toml
crate/src/: lib.rs  main.rs
front/: .env  bun.lockb  index.html  package.json
front/src/: App.css  App.tsx  index.css
server/: Cargo.toml
server/src/: app.rs  conf.rs  conf_defaults.toml  main.rs  registry.rs  storage.rs
server/src/storage/: gcs.rs  local.rs  mod.rs
uploader/: Cargo.toml
uploader/src/: lib.rs  main.rs
