[workspace]
resolver = "2"
members = ["server", "crate"]

[workspace.package]
edition = "2021"
homepage = "https://hyli.org/"
repository = "https://github.com/hyli-org/hyli-registry/"

[workspace.dependencies]
sdk = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-contract-sdk", branch = "main" }
client-sdk = { git = "https://github.com/hyli-org/hyli.git", default-features = false, package = "hyli-client-sdk", branch = "main" }
hyli-modules = { git = "https://github.com/hyli-org/hyli.git", package = "hyli-modules", branch = "main" }

anyhow = "1.0.96"
axum = "0.8.3"
borsh = "1.6.0"
clap = "4.5.28"
config = { version = "0.15.11", default-features = false }
hex = "0.4.3"
hmac = "0.12.1"
opentelemetry = "0.28"
opentelemetry-prometheus = "0.28.0"
opentelemetry_sdk = "0.28.0"
prometheus = "0.13.4"
rand = "0.9.0"
reqwest = "0.12.9"
secp256k1 = "0.30.0"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
sha2 = "0.10.8"
thiserror = "2.0"
tokio = "1.44.2"
tower-http = "0.6.2"
tracing = "0.1.41"
utoipa = "5.3.1"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["vendored"] }
