[package]
name = "hyli-registry"
description = "Hyli Registry - Upload and download ELF binaries"
version = "0.4.0"
license = "MIT"
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[lib]
name = "hyli_registry"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
hex = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
