[package]
name = "server"
edition = "2021"

[dependencies]
sdk = { workspace = true, features = ["tracing"] }
client-sdk = { workspace = true, features = ["risc0", "rest"] }
hyli-modules = { workspace = true }

config = { workspace = true, default-features = false, features = ["toml"] }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
anyhow = { workspace = true }

tracing = { workspace = true }
clap = { workspace = true }
utoipa-axum = { workspace = true }
utoipa = { workspace = true }

prometheus = { workspace = true }
