[package]
name = "server"
edition = "2021"

[dependencies]
sdk = { workspace = true, features = ["tracing"] }
client-sdk = { workspace = true, features = ["risc0", "rest"] }
hyli-modules = { workspace = true }

config = { workspace = true, default-features = false, features = ["toml"] }
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
anyhow = { workspace = true }
async-trait = "0.1.87"
bytes = "1.10.0"
chrono = { version = "0.4.40", default-features = false, features = [
  "clock",
  "serde",
] }
hex = { workspace = true }
sha2 = { workspace = true }
google-cloud-storage = "0.24.0"

tracing = { workspace = true }
clap = { workspace = true }

prometheus = { workspace = true }
opentelemetry = { workspace = true }

tracing-subscriber = { version = "0.3.19" }

[package.metadata.cargo-machete]
ignored = ["opentelemetry"]

[features]
instrumentation = ["hyli-modules/instrumentation"]
