[package]
name = "hyli-registry-uploader"
description = "Hyli Registry Uploader"
version = "0.2.1"
license = "MIT"
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[lib]
name = "hyli_registry_uploader"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
hex = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
